added elements for the bonus 1

--- a/index.html
+++ b/index.html
@@ -7,15 +7,23 @@
     <title>FizzBuzz</title>
 
     <!-- ----Added myscript---- -->
-    <scrip src="js/myscript.js" defer></script>
+    <script src="js/myscript.js" defer></script>
 
     <!-- ----Added link to css---- -->
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
-    
-    
+
+    <main>
+        <h1>
+            Fizz Buzz or FizzBuzz?
+        </h1>
+
+        <ul style="list-style: none;">
+
+        </ul>
+    </main>
 
 </body>
 </html>
