bonus rainbow title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <main>
-        <h1>
+        <h1 onload="rainbow();" class="rainbow">
             Fizz Buzz or FizzBuzz?
         </h1>
 
